--- a/static/css/form.css
+++ b/static/css/form.css
@@ -7,17 +7,11 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 #welcometext{
-  max-width:500px;
-    min-height: 470px;
-    float:left;
-    margin: 40px auto;
-    margin-left: 30px;
-    border-radius:2px;
-    padding:20px;
-;
+  text-align: center;
 }
-#finalsentence{
-  float: left;
+
+.listCenter{
+  text-align: center;
 }
 form{
     max-width:500px;
@@ -39,6 +33,15 @@ h1{
 }
 
 h2{
+  display: block;
+    text-align: center;
+    padding: 0;
+    margin: 0px 0px 20px 0px;
+    color: #000000;
+    font-size:larger;
+}
+
+h3{
   display: block;
     text-align: center;
     padding: 0;
