--- a/templates/en/welcome.html
+++ b/templates/en/welcome.html
@@ -61,9 +61,9 @@
         </li>
         <li></li>
     </ul>
-    <br>
-    <br>
+</form>
 
+<form action="">
     <ul>
         <h2>
              Don't want to create an account. <br>
