--- a/templates/bg/gez_explanation.html
+++ b/templates/bg/gez_explanation.html
@@ -9,7 +9,7 @@
 {% block body %}
 <h1>Добре дошли в нашия GEZ-help!</h1>
 <h2>Поискахте помощ за gez-документ.</h2>
-<p>GEZ е таксата за излъчване тук, в Германия. Всеки апартамент трябва да го плати, така че няма как да избягате от него, ако искате да живеете в Германия.</p>
+<p>Такса радио е таксата за излъчване тук, в Германия. Всеки апартамент трябва да го плати, така че няма как да избягате от него, ако искате да живеете в Германия.</p>
 <p>Въпреки че може да е досадно да плащате, трябва да попълните документа само веднъж, стига да живеете в настоящия си апартамент.</p>
 <h3>Разделяме документа на множество малки части.</h3>
 <ul>
