french translation part 1

--- a/templates/fr/about_us.html
+++ b/templates/fr/about_us.html
@@ -1,7 +1,7 @@
 {% extends 'en/en_base.html' %}
 
 {% block head %}
-<title>About us</title>
+<title>À propos de nous</title>
 {% endblock %}
 
 {% block body %}
