--- a/templates/fr/en_base.html
+++ b/templates/fr/en_base.html
@@ -37,7 +37,7 @@
                     <a href="?lang=en">English</a>
                     <a href="?lang=de">German</a>
                     <a href="?lang=bg">Bulgarian</a>
-                    <a href="?lang=fr">French</a>
+                    <a href="?lang=fr">Français</a>
                 </div>
             </div>
             <a href="/en/about">About</a>
