--- a/templates/fr/legalNotice.html
+++ b/templates/fr/legalNotice.html
@@ -1,11 +1,11 @@
 {% extends 'en/en_base.html' %}
 
 {% block head %}
-<title>Legal Notice</title>
+<title>Mention légale</title>
 {% endblock %}
 {% block body %}
 <header>
-    <h1>Legal Notice</h1>
+    <h1>Mention légale</h1>
 </header>
 
 <p><strong>Ville de Mannheim</strong><br>
