--- a/templates/fr/privacy_policy.html
+++ b/templates/fr/privacy_policy.html
@@ -2,7 +2,7 @@
 
 
 {% block head %}
-<title> Privacy policy</title>
+<title> Politique de confidentialité</title>
 {% endblock %}
 {% block body %}
 
