--- a/templates/fr/welcome.html
+++ b/templates/fr/welcome.html
@@ -2,7 +2,7 @@
 {%extends 'en/en_base.html'%}
 
 {% block head %}
-<title>Welcome</title>
+<title>Bienvenue</title>
 {% endblock %}
 
 {% block body %}
