--- a/templates/fr/adress/adress1.html
+++ b/templates/fr/adress/adress1.html
@@ -1,4 +1,4 @@
-{% extends 'en/en_base.html' %}
+{% extends 'fr/fr_base.html' %}
 
 {% block head %}
 <title>GEZ</title>
@@ -6,15 +6,15 @@
 {% block body %}
 <div class="pers-fields">
     <form action="/{{language}}/gez/adress" method="POST">
-        <h1> Adress 1 of 5</h1>
+        <h1> Adresse 1 sur 5</h1>
         <ul>
             <li>
-                <label for="date_registered">Date registered:</label>
+                <label for="date_registered">Date d'enregistrement:</label>
                 <input type="date" id="date_registered" name="date_reg" required>
                 <span> <details><summary>
-                    Help?
+                    Aider?
                 </summary> 
-                    <p>Please enter the exact date that you have registered your adress in the City.
+                    <p>Veuillez saisir la date exacte à laquelle vous avez enregistré votre adresse dans la ville.
                     </p>
                 </details></span>
             </li>
