--- a/templates/fr/adress/adress4.html
+++ b/templates/fr/adress/adress4.html
@@ -1,4 +1,4 @@
-{% extends 'en/en_base.html' %}
+{% extends 'fr/fr_base.html' %}
 
 {% block head %}
 <title>GEZ</title>
@@ -6,24 +6,24 @@
 {% block body %}
 <div class="pers-fields">
     <form action="/{{language}}/gez/adress" method="POST">
-        <h1> Adress 4 of 5</h1>
+        <h1> Adresse 4 sur 5</h1>
         <ul> <li>
-            <label for="zip_code">ZIP Code:</label>
+            <label for="zip_code">Code postal:</label>
             <input type="number" id="zip_code" name="zip_code" required>
             <span class="extra-info"><details><summary>Help?
 
             </summary>
-                Please enter the Postal Code of your adress. For example 67812, 62342
+            Veuillez saisir le code postal de votre adresse. Par exemple 67812, 62342
             </details>
         </span>
         </li>
         <li>
-            <label for="city">City:</label>
+            <label for="city">Ville:</label>
             <input type="text" id="city" name="city" required>
-            <span class="extra-info"><details><summary>Help?
+            <span class="extra-info"><details><summary>Aider?
 
             </summary>
-            Please enter the name of the city you live in. For example: Johntown, Getinsburg.
+            Veuillez saisir le nom de la ville dans laquelle vous vivez. Par exemple: Paris, France.
         </details>
                
             </span>
