--- a/templates/fr/general_information/general_information1.html
+++ b/templates/fr/general_information/general_information1.html
@@ -1,20 +1,20 @@
-{% extends 'en/en_base.html' %}
+{% extends 'fr/fr_base.html' %}
 
 {% block head %}
 <title>GEZ</title>
 {% endblock %}
 {% block body %}
 <form action="/{{language}}/gez/general_information" method='POST'>
-    <h1>General Information 1 of 3</h1>
+    <h1>Informations générales 1 sur 3</h1>
     <ul>
         <li>
-            <label for="">Gender</label>
-            <input type="radio" name="gender" id="radioMale" required> Male
-            <input type="radio" name="gender" id="radioFemale"> Female
+            <label for="">Genre</label>
+            <input type="radio" name="gender" id="radioMale" required> Mâle
+            <input type="radio" name="gender" id="radioFemale"> Femelle 
             <span><details><summary>
-                Help?
+                Aider?
             </summary> 
-                <p>Enter your gender here please </p>
+                <p>Entrez votre sexe ici s'il vous plaît </p>
             </details></span>
         </li>
         <li>
