--- a/templates/fr/general_information/general_information3.html
+++ b/templates/fr/general_information/general_information3.html
@@ -1,20 +1,20 @@
-{% extends 'en/en_base.html' %}
+{% extends 'fr/fr_base.html' %}
 
 {% block head %}
 <title>GEZ</title>
 {% endblock %}
 {% block body %}
 <form action="/{{language}}/gez/general_information" method='POST'>
-    <h1>General Information 3 of 3</h1>
+    <h1>Informations générales 3 sur 3</h1>
     <ul>
         <li>
-            <label for="dateOfBirth">Date of Birth</label>
+            <label for="dateOfBirth">Date de naissance</label>
             <input type="date" name="dateOfBirth" id="dob" required>
             <span><details><summary>
-                Help?
+                Aider?
             </summary> 
-                <p>Enter your date of birth here please 
-                    <br> It is the day you were born.
+                <p>Entrez votre date de naissance ici s'il vous plaît
+                    <br> C'est le jour de ta naissance.
                 </p>
             </details></span>
         </li>
