--- a/templates/fr/payment_methods/payment_methods1.html
+++ b/templates/fr/payment_methods/payment_methods1.html
@@ -1,4 +1,4 @@
-{% extends 'en/en_base.html' %}
+{% extends 'fr/fr_base.html' %}
 
 {% block head %}
 <title>GEZ</title>
@@ -7,18 +7,18 @@
 
 <div class="pers-fields">
     <form action="/{{language}}/gez/payment_methods" method="POST">
-        <h1>Types of payment 1 of 2</h1>
+        <h1>Types de paiement 1 sur 2</h1>
         <ul>
             <li>
-                <label for=""> Timespan </label>
-                <input type="radio" id="3-months" name="timespan" value="1" required>In the middle of the first 3 months(at the 15th) <br> <br>
-                <input type="radio" id="3-months-before" name="timespan" value="2">3 Months prepaid:(1.1, 1.4, 1.7, 1.10) <br> <br>
-                <input type="radio" id="6-months-before" name="timespan" value="3">6 Months prepaid:(1.1, 1.7) <br> <br>
-                <input type="radio" id="12-months-before" name="timespan" value="4">12 Months prepaid(1.1) <br> 
+                <label for=""> Période de temps </label>
+                <input type="radio" id="3-months" name="timespan" value="1" required>Au milieu des 3 premiers mois (au 15) <br> <br>
+                <input type="radio" id="3-months-before" name="timespan" value="2">3 mois prépayés: (1.1, 1.4, 1.7, 1.10) <br> <br>
+                <input type="radio" id="6-months-before" name="timespan" value="3">6 mois prépayés: (1.1, 1.7) <br> <br>
+                <input type="radio" id="12-months-before" name="timespan" value="4">12 mois prépayés (1,1) <br> 
                 <span><details>
                     <summary>
-                        Help?
-                    </summary> Please choose the timespan in which you want to pay the fee.
+                        Aider?
+                    </summary> Veuillez choisir la période pendant laquelle vous souhaitez payer les frais.
                 </details>
                     
                 </span>
