--- a/templates/fr/sepa/sepa1.html
+++ b/templates/fr/sepa/sepa1.html
@@ -1,4 +1,4 @@
-{% extends 'en/en_base.html' %}
+{% extends 'fr/fr_base.html' %}
 
 {% block head %}
 <title>GEZ</title>
@@ -6,16 +6,16 @@
 {% block body %}
 
 <form action="/{{language}}/gez/sepa" method="POST">
-    <h1>SEPA direct debit mandate 1 of 4</h1>
+    <h1>Mandat de prélèvement SEPA 1 sur 4</h1>
     <ul>
         <li>
-        <label for="name">Name</label>
+        <label for="name">Nom</label>
         <input type="text" name="fullName" id="name" required>
         <span><details>
             <summary>
-                Help?
-            </summary>Enter your full name in the following order: title, last name, first name<br> For example: Dr. Mustermann Max
-        <br> If this bank account is not yours, please write down the name of this accounts owner.</span>
+                Aider?
+            </summary>Entrez votre nom complet dans l'ordre suivant: titre, nom, prénom<br> Par exemple: Dr Mustermann Max
+        <br>Si ce compte bancaire n'est pas le vôtre, veuillez noter le nom du propriétaire de ce compte.</span>
         </details>
         </li>
         
