--- a/templates/fr/sepa/sepa3.html
+++ b/templates/fr/sepa/sepa3.html
@@ -1,4 +1,4 @@
-{% extends 'en/en_base.html' %}
+{% extends 'fr/fr_base.html' %}
 
 {% block head %}
 <title>GEZ</title>
@@ -6,24 +6,24 @@
 {% block body %}
 
 <form action="/{{language}}/gez/sepa" method="POST">
-    <h1>SEPA direct debit mandate 3 of 4</h1>
+    <h1>Mandat de prélèvement SEPA 3 sur 4</h1>
     <ul>
         <li>
-            <label for="ZIP_code">ZIP:</label>
+            <label for="ZIP_code">Code postal:</label>
             <input type="number" id="ZIP_code" name="ZIP_code" required>
             <span><details>
                 <summary>
-                    Help?
-                </summary>Enter the ZIP-code of your adress here please. It should be the same just as the address you wrote down earlier.
+                    Aider?
+                </summary>Entrez ici le code postal de votre adresse. Ce devrait être la même que l'adresse que vous avez écrite plus tôt.
             </details> </span>
         </li>
         <li>
-            <label for="area">City:</label>
+            <label for="area">Ville:</label>
             <input type="text" id="area" name="area" required>
             <span><details>
                 <summary>
-                    Help?
-                </summary>Enter the City of your home here please. It should be the same just as the address you wrote down earlier.
+                    Aider?
+                </summary>Entrez ici la ville de votre domicile. Ce devrait être la même que l'adresse que vous avez écrite plus tôt.
                 </details> </span>
         </li>
         <li>
