--- a/templates/fr/sepa/sepa4.html
+++ b/templates/fr/sepa/sepa4.html
@@ -1,4 +1,4 @@
-{% extends 'en/en_base.html' %}
+{% extends 'fr/fr_base.html' %}
 
 {% block head %}
 <title>GEZ</title>
@@ -6,17 +6,17 @@
 {% block body %}
 
 <form action="/{{language}}/gez/sepa" method="POST">
-    <h1>SEPA direct debit mandate 4 of 4</h1>
+    <h1>Mandat de prélèvement SEPA 4 sur 4</h1>
     <ul>
         <li>
             <label for="IBAN">IBAN:</label>
             <input type="text" id="IBAN" name="IBAN" required>
             <span><details>
                 <summary>
-                    Help?
-                </summary>Enter the IBAN of your bank account here please. It is also known as your bank identification code. <br>
-                It is a connection from the country you live in, your bank code and your account number.<br>
-                For example: <i>DE02120300000000202051     </i>
+                    Aider?
+                </summary>Saisissez ici l'IBAN de votre compte bancaire. Il est également connu sous le nom de code d'identification bancaire. <br>
+                Il s'agit d'une connexion depuis le pays dans lequel vous vivez, votre code bancaire et votre numéro de compte.<br>
+                Par example: <i>DE02120300000000202051     </i>
             </details> </span>
         </li>
         <li>
@@ -24,19 +24,19 @@
             <input type="text" id="BIC" name="BIC" required>
             <span><details>
                 <summary>
-                    Help?
-                </summary>Enter the BIC of your bank account here please. It is also known as your Bank Identifier Code.<br>
-                For example: <i>BYLADEM1001</i>	
+                    Aider?
+                </summary>Saisissez ici le BIC de votre compte bancaire. Il est également connu sous le nom de code d'identification de votre banque.<br>
+                Par example: <i>BYLADEM1001</i>	
             </details></span>
         </li>
         <li>
-            <label for="credit_institution">Credit institution:</label>
+            <label for="credit_institution">Établissement de crédit:</label>
                     <input type="text" id="credit_institution" name="credit_institution" required>
             <span><details>
                 <summary>
-                    Help?
-                </summary>Enter the name of your credit institution here please.
-                For example: <i>DEUTSCHE KREDITBANK BERLIN </i>
+                    Aider?
+                </summary>Saisissez ici le nom de votre établissement de crédit.
+                Par example: <i>France Kredit Bank Paris </i>
             </details></span>
         </li>
         <li>
