--- a/templates/en/welcome.html
+++ b/templates/en/welcome.html
@@ -54,7 +54,7 @@
         
             <ul>
                 <li>
-                    <a href="/register">
+                    <a href="/{{language}}/register">
                         <p id="reg">Register</p>
                     </a>
                     
@@ -70,7 +70,7 @@
         <i>You can decide here on what we should help you!</i>
     </summary> 
         <p><a href=" "> Appartement registration</a> 
-            <br> <a href="/home"> GEZ</a> 
+            <br> <a href="/{{language}}/home"> GEZ</a> 
             <br> <a href=" ">Child care</a>
         </p>
     </details></span>
