--- a/templates/en/adress/adress1.html
+++ b/templates/en/adress/adress1.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block body %}
 <div class="pers-fields">
-    <form action="/{{language}}/gez/adress" method="POST">
+    <form action="/{{language}}/gez/adress1" method="POST">
         <h1> Adress 1 of 5</h1>
         <ul>
             <li>
