--- a/templates/en/sepa/sepa3.html
+++ b/templates/en/sepa/sepa3.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block body %}
 
-<form action="/{{language}}/gez/sepa" method="POST">
+<form action="/{{language}}/gez/sepa3" method="POST">
     <h1>SEPA direct debit mandate 3 of 4</h1>
     <ul>
         <li>
@@ -32,4 +32,4 @@
         </li>
     </ul>
 </form>
-{%endblock}
+{%endblock%}
