--- a/templates/fr/fr_base.html
+++ b/templates/fr/fr_base.html
@@ -2,7 +2,7 @@
 <!---->
 <!-- A html tag with the necessary language for the page-->
 <!-- <html lang="bg/en/de/fr">-->
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -27,10 +27,10 @@
 
     <nav class="Navbar">
         <div class="topnav" id="myTopnav">
-            <a href="/en/home" class="active">Home</a>
-            <a href="">Documents</a>
+            <a href="/en/home" class="active">Domicile</a>
+            <a href="">Des documents</a>
             <div class="dropdown">
-                <button class="dropbtn">Languages
+                <button class="dropbtn">Langues
                     <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
@@ -40,8 +40,8 @@
                     <a href="?lang=fr">Français</a>
                 </div>
             </div>
-            <a href="/en/about">About</a>
-            <a href="">Logout</a>
+            <a href="/en/about">À propos</a>
+            <a href="">Se déconnecter</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </div>
     </nav>
