--- a/templates/fr/gez_explanation.html
+++ b/templates/fr/gez_explanation.html
@@ -1,4 +1,4 @@
-{% extends 'en/en_base.html' %}
+{% extends 'fr/fr_base.html' %}
 
 
 {% block start %} 
@@ -8,18 +8,18 @@
 <title>GEZ</title> 
 {% endblock %}
 {% block body %}
-<h1>Welcome to our GEZ-help!</h1>
-<h2>You requested some help for a gez-document.</h2>
-<p>GEZ is the broadcast fee here in germany. Every apartment has to pay it, so there is no escape from it, if you want to live in germany.</p>
-<p>While it can be annoying to pay, you only have to fill out the document once, as long as you live in your current apartment.</p>
-<h3>We devide the document into multiple little parts.</h3>
+<h1>Bienvenue dans notre GEZ-help!</h1>
+<h2>Vous avez demandé de l'aide pour un document gez.</h2>
+<p>GEZ est la redevance de diffusion ici en Allemagne. Chaque appartement doit le payer, donc il n'y a pas d'échappatoire, si vous voulez vivre en Allemagne.</p>
+<p>Bien que cela puisse être ennuyeux de payer, vous ne devez remplir le document qu'une seule fois, tant que vous vivez dans votre appartement actuel.</p>
+<h3>Nous divisons le document en plusieurs petites parties.</h3>
 <ul>
-    <li>First of all we need your general informations, such as your name or your birth date</li>
-    <li>Secondly we need informations about your adress</li>
-    <li>Afterwards we need to know your prefered payment method.</li>
-    <li>If you like to use SEPA we need your banking information. Otherwise you have to send the money on your own.</li>
-    <li>Finally, if you are done, you just have to sign the document and you are done!</li>
+    <li>Tout d'abord, nous avons besoin de vos informations générales, telles que votre nom ou votre date de naissance</li>
+    <li>Deuxièmement, nous avons besoin d'informations sur votre adresse</li>
+    <li>Ensuite, nous devons connaître votre mode de paiement préféré.</li>
+    <li>Si vous souhaitez utiliser SEPA, nous avons besoin de vos informations bancaires. Sinon, vous devez envoyer vous-même l'argent.</li>
+    <li>Enfin, si vous avez terminé, il vous suffit de signer le document et vous avez terminé!</li>
 </ul>
-<h3> If you like to start now, just press the start button.</h3>
+<h3> Si vous souhaitez commencer maintenant, appuyez simplement sur le bouton de démarrage.</h3>
 <input type="submit" value="START" onclick="">
 {% endblock %}
