--- a/templates/fr/home.html
+++ b/templates/fr/home.html
@@ -1,22 +1,22 @@
-{% extends 'en/en_base.html' %}
+{% extends 'fr/fr_base.html' %}
 
 
 {% block head %}
-<title> Welcome </title>
+<title> Bienvenue </title>
 {% endblock %}
 {% block body %}
-<h1>Welcome </h1>
+<h1>Bienvenue </h1>
 <hr>
-<h2> Please choose the document, that you need help with: </h2>
+<h2> Veuillez choisir le document pour lequel vous avez besoin d'aide: </h2>
 <ul>
         <li>
-                <a href="">Appartement registration</a>
+                <a href="">Inscription de l'appartement</a>
         </li>
         <li>
                 <a href="/en/gez/general_information"> GEZ</a>
         </li>
         <li>
-                <a href="">Child care</a>
+                <a href="">Garde d'enfants</a>
         </li>
         <li></li>
 </ul>
