--- a/templates/en/register.html
+++ b/templates/en/register.html
@@ -37,12 +37,14 @@
         </li>
         <li>
             <label for="fName">First Name</label>
-            <input type="text" name="firstName" id="fName">
+            <input type="text" name="firstName" id="fName"
+                pattern="[^0-9]">
             <span>Enter your first name here please</span>
         </li>
         <li>
             <label for="lastName">Last Name</label>
-            <input type="text" name="lastName" id="lName">
+            <input type="text" name="lastName" id="lName"
+                pattern="[^0-9]">
             <span>Enter your last name here please</span>
         </li>
         <li>
