--- a/templates/en/adress/adress4.html
+++ b/templates/en/adress/adress4.html
@@ -9,7 +9,7 @@
         <h1> Adress 4 of 5</h1>
         <ul> <li>
             <label for="zip_code">ZIP Code:</label>
-            <input type="number" id="zip_code" name="zip_code" required>
+            <input type="text" id="zip_code" name="zip_code" pattern="[0-9]{5}$"  required>
             <span class="extra-info"><details><summary>Help?
 
             </summary>
@@ -19,7 +19,7 @@
         </li>
         <li>
             <label for="city">City:</label>
-            <input type="text" id="city" name="city" required>
+            <input type="text" id="city" name="city" pattern="[^0-9]" required>
             <span class="extra-info"><details><summary>Help?
 
             </summary>
@@ -35,4 +35,6 @@
 
     </ul>
     </form>
+</div>
+
     {% endblock %}
