--- a/templates/en/sepa/sepa1.html
+++ b/templates/en/sepa/sepa1.html
@@ -10,7 +10,7 @@
     <ul>
         <li>
         <label for="name">Name</label>
-        <input type="text" name="fullName" id="name" pattern="[^0-9]" required>
+        <input type="text" name="fullName" id="name" pattern="\p{Alpha}*" required>        
         <span><details>
             <summary>
                 Help?
