English almost ready

--- a/templates/en/about_us.html
+++ b/templates/en/about_us.html
@@ -26,7 +26,7 @@
     Our teammembers are:
 </h2>
 <p class="boxed">
-    <img src="/images/Profil 1.png" class="image"> <br>
+    <img src="{{url_for('static', filename='images/Profil 1.png')}}" class="image"> <br>
     First member is Georgi Haydukov, a who is responsible for
     the cookies and our privacy policies, bulgarian translation and some JavaScript. <br>
     You can reach him under his email:
@@ -36,7 +36,7 @@
 <br>
 <br>
 <p class="boxed">
-    <img src="/images/Profil 2.png" class="image"> <br>
+    <img src="{{url_for('static', filename='images/Profil 2.png')}}" class="image"> <br>
     Furthermore we have Aleksandar Histrov, our Flask specialist and
     bulgarian translator.
     You can reach him under his email:
@@ -46,7 +46,7 @@
 <br>
 <br>
 <p class="boxed">
-    <img src="/images/Profil 3.png" class="image"> <br>
+    <img src="{{url_for('static', filename='images/Profil 3.png')}}" class="image"> <br>
     This is Robert Endler who works not only on our imprint, but also
     on our french translation.
     You can reach him under his email:
@@ -56,7 +56,7 @@
 <br>
 <br>
 <p class="boxed">
-    <img src="/images/Profil 4.png" class="image"> <br>
+    <img src="{{url_for('static', filename='images/Profil 4.png')}}" class="image"> <br>
     Here is Ilyas Bal who is working on our tutorials andexplanations for your future documents.
     You can reach him under his email:
     <a href="ilyas.bal@stud.hs-mannheim.de">ilyas.bal@stud.hs-mannheim.de</a>
@@ -65,7 +65,7 @@
 <br>
 <br>
 <p class="boxed">
-    <img src="/images/profil 5.png" class="image"> <br>
+    <img src="{{url_for('static', filename='images/Profil 5.png')}}" class="image"> <br>
     Lennart Gulde is also working on our tutorials and helping out on our loginsystem.
     You can reach him under his email:
     <a href="lennart.gulde@stud.hs-mannheim.de">lennart.gulde@stud.hs-mannheim.de</a>
@@ -74,7 +74,7 @@
 <br>
 <br>
 <p class="boxed">
-    <img src="/images/profil 6.png" class="image"> <br>
+    <img src="{{url_for('static', filename='images/Profil 6.png')}}" class="image"> <br>
     Finally here is Muhammed Yavuz, who is responsible for the information you are reading right now! Moreover he works
     on the login, just as on the menu.
     You can reach him under his email:
