--- a/templates/en/home.html
+++ b/templates/en/home.html
@@ -12,7 +12,7 @@
                 <a href="">Appartement registration</a>
         </li>
         <li>
-                <a href='/en/gez/gez_explanation'> GEZ</a>
+                <a href='/{{language}}/gez/gez_explanation'> GEZ</a>
         </li>
         <li>
                 <a href="">Child care</a>
