--- a/templates/en/welcome.html
+++ b/templates/en/welcome.html
@@ -23,12 +23,12 @@
         We use all of your knowledge and expeariance to create this website in cooperation with the welfare faculty from
         the Hochschule Mannheim. <br>
         If you want to learn more <b>about each member of our team </b>, you can click right here <a
-            href="en/about_us.html"> here</a>.
+            href="/{{language}}/about_us"> here</a>.
     </p>
 </form>
 <p>
 
-<form action="/" method="POST">
+<form action="/{{language}}/" method="POST">
     <h1>Login</h1>
     <ul>
         <li>
@@ -50,7 +50,7 @@
         <h3>You don't have an account. Create one right here.</h3>
         <li class="listCenter">
 
-            <a href="/register">Register</a>
+            <a href="/{{language}}/register">Register</a>
 
         </li>
         <li></li>
@@ -67,7 +67,7 @@
             <a href=" "> Appartement registration</a>
         </li>
         <li class="listCenter">
-            <a href="/home"> GEZ</a>
+            <a href="/{{language}}/home"> GEZ</a>
         </li>
         <li class="listCenter">
             <a href=" ">Child care</a>
@@ -82,7 +82,7 @@
     <p>
         We use cookies in this website to give you the best experience possible
         and show you relevant ads. To find out more, read our
-        <a href="/en/privacy_policy">privacy policy</a>.
+        <a href="/{{language}}/privacy_policy">privacy policy</a>.
     </p>
 
     <button class="cookie-btn">
