--- a/templates/bg/final.html
+++ b/templates/bg/final.html
@@ -10,13 +10,13 @@
 <hr>
 <h2> Моля, не забравяйте, че все още се нуждаем от Вашия подпис и датата като потвърждение! Тук трябва да влезете! <details>
     <summary>Изглежда по този начин!</summary>
-    <img src="/images/Part_3.png" class="image">
+    <img src="url_for('static', filename='images/Part_3.png')" class="image">
     </details>
     <br> </h2>
     
 <p>Ако се нуждаете от някаква допълнителна помощ, моля, не се колебайте да се свържете с линията за помощ. <a href="https://www.mannheim.de/de/service-bieten/integration-migration/anima-ankommen-in-mannheim"></a>ANIMA </a></p>
 <p>
-    Ако искате да попълните някой друг документ, моля кликнете <a href="/en/gez/home">тук</a>.
+    Ако искате да попълните някой друг документ, моля кликнете <a href="/{{language}}/home">тук</a>.
 </p>
 
 {% endblock %}
