--- a/templates/en/welcome.html
+++ b/templates/en/welcome.html
@@ -67,7 +67,7 @@
             <a href=" "> Appartement registration</a>
         </li>
         <li class="listCenter">
-            <a href="/{{language}}/home"> GEZ</a>
+            <a href="/{{language}}/gez/gez_explanation"> GEZ</a>
         </li>
         <li class="listCenter">
             <a href=" ">Child care</a>
