--- a/templates/bg/about_us.html
+++ b/templates/bg/about_us.html
@@ -28,7 +28,7 @@
     Участници в проекта:
 </h2>
 <p class="boxed">
-    <img src="/images/Profil 1.png" class="image"> <br>Първият член е Георги Хайдуков, който отговаря
+    <img src="{{url_for('static', filename='images/Profil 1.png')}}" class="image"> <br>Първият член е Георги Хайдуков, който отговаря
     бисквитките и нашите политики за поверителност. Можете да се свържете с него на имейла му: <a
         href="11@stud.hs-mannheim.de">11@stud.hs-mannheim.de</a>
 </p>
@@ -36,14 +36,14 @@
 <br>
 <br>
 <p class="boxed">
-    <img src="/images/Profil 2.png" class="image"> <br>Освен това имаме Александър Хистров, нашият Flask специалист и
+    <img src="{{url_for('static', filename='images/Profil 2.png')}}" class="image"> <br>Освен това имаме Александър Хистров, нашият Flask специалист и
     български преводач. Можете да се свържете с него на имейла му: <a href="12@stud.hs-mannheim.de">12@stud.hs-mannheim.de</a>
 </p>
 <br>
 <br>
 <br>
 <p class="boxed">
-    <img src="/images/Profil 3.png" class="image"> <br>Това е Робърт Ендлер, който работи не само върху нашето правно известие,
+    <img src="{{url_for('static', filename='images/Profil 3.png')}}" class="image"> <br>Това е Робърт Ендлер, който работи не само върху нашето правно известие,
      но също така
     прави френски превод на уебсайта. Можете да се свържете с него на имейла му: <a
         href="13@stud.hs-mannheim.de">13@stud.hs-mannheim.de</a>
@@ -52,7 +52,7 @@
 <br>
 <br>
 <p class="boxed">
-    <img src="/images/Profil 4.png" class="image"> <br>Тук е Иляс Бал, който работи по нашите уроци и
+    <img src="{{url_for('static', filename='images/Profil 4.png')}}" class="image"> <br>Тук е Иляс Бал, който работи по нашите уроци и
     обяснения за бъдещите ви документи. Можете да се свържете с него на имейла му: <a
         href="14@stud.hs-mannheim.de">14@stud.hs-mannheim.de</a>
 </p>
@@ -60,14 +60,14 @@
 <br>
 <br>
 <p class="boxed">
-    <img src="/images/profil 5.png" class="image"> <br>Ленард Гулде също работи по нашите уроци и помага
+    <img src="{{url_for('static', filename='images/Profil 5.png')}}" class="image"> <br>Ленард Гулде също работи по нашите уроци и помага
     нашата система за вход. Можете да се свържете с него на имейла му: <a href="15@stud.hs-mannheim.de">15@stud.hs-mannheim.de</a>
 </p>
 <br>
 <br>
 <br>
 <p class="boxed">
-    <img src="/images/profil 6.png" class="image"> <br>Накрая тук е Мохамед Явуз, който е отговорен за
+    <img src="{{url_for('static', filename='images/Profil 6.png')}}" class="image"> <br>Накрая тук е Мохамед Явуз, който е отговорен за
     информацията, която четете в момента! Освен това той работи върху регистрацията в нашия уебсайт, точно както и върху менюто. Можете да се свържете отдолу
     неговия имейл: <a href="16@stud.hs-mannheim.de">16@stud.hs-mannheim.de</a>
 </p>
