--- a/templates/bg/adress/adress1.html
+++ b/templates/bg/adress/adress1.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block body %}
 <div class="pers-fields">
-    <form action="/{{language}}/gez/adress" method="POST">
+    <form action="/{{language}}/gez/adress1" method="POST">
         <h1> Адрес 1 от 5</h1>
         <ul>
             <li>
