--- a/templates/bg/bg_base.html
+++ b/templates/bg/bg_base.html
@@ -29,16 +29,11 @@
         <div class="topnav" id="myTopnav">
             <a href="/en/home" class="active">Начална Страница</a>
             <a href="">Документи</a>
-            <div class="dropdown">
-                <button class="dropbtn">Езици
-                    <i class="fa fa-caret-down"></i>
-                </button>
-                <div class="dropdown-content">
-                    <a href="?lang=en">Англйиски</a>
-                    <a href="?lang=de">Немски</a>
-                    <a href="?lang=bg">Български</a>
-                    <a href="?lang=fr">Френски</a>
-                </div>
+            <div class="flags">
+                <a href="?lang=en"> <img src="{{url_for('static', filename='images/us.png')}}"> </a>
+                <a href="?lang=de"> <img src="{{url_for('static', filename='images/de.png')}}"> </a>
+                <a href="?lang=bg"> <img src="{{url_for('static', filename='images/bg.png')}}"> </a>
+                <a href="?lang=fr"> <img src="{{url_for('static', filename='images/fr.png')}}"> </a>
             </div>
             <a href="/en/about">За нас</a>
             <a href="">Изход</a>
