--- a/templates/bg/payment_methods/payment_methods1.html
+++ b/templates/bg/payment_methods/payment_methods1.html
@@ -6,7 +6,7 @@
 {% block body %}
 
 <div class="pers-fields">
-    <form action="/{{language}}/gez/payment_methods" method="POST">
+    <form action="/{{language}}/gez/payment_methods1" method="POST">
         <h1>Методи на плащане 1 от 2</h1>
         <ul>
             <li>
