--- a/templates/bg/sepa/sepa3.html
+++ b/templates/bg/sepa/sepa3.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block body %}
 
-<form action="/{{language}}/gez/sepa" method="POST">
+<form action="/{{language}}/gez/sepa3" method="POST">
     <h1>Мандат за директен дебит на SEPA 3 от 4</h1>
     <ul>
         <li>
